@@ -1357,25 +1357,24 @@ function rcmail_folder_options($mailbox)
  */
 function rcmail_update_folder_row($name, $oldname=null, $subscribe=false, $class_name=null)
 {
-    global $RCMAIL, $OUTPUT;
+    global $RCMAIL;
 
-    $protect_folders = $RCMAIL->config->get('protect_default_folders');
-    $storage         = $RCMAIL->get_storage();
-    $delimiter       = $storage->get_hierarchy_delimiter();
-
+    $storage      = $RCMAIL->get_storage();
+    $delimiter    = $storage->get_hierarchy_delimiter();
+    $options      = rcmail_folder_options($name);
     $name_utf8    = rcube_charset::convert($name, 'UTF7-IMAP');
-    $protected    = $protect_folders && $storage->is_special_folder($name);
     $foldersplit  = explode($delimiter, $storage->mod_folder($name));
     $level        = count($foldersplit) - 1;
-    $display_name = $protected ? $RCMAIL->localize_foldername($name) : rcube_charset::convert($foldersplit[$level], 'UTF7-IMAP');
+    $display_name = $options['protected'] ? $RCMAIL->localize_foldername($name) : rcube_charset::convert($foldersplit[$level], 'UTF7-IMAP');
     $class_name   = trim($class_name . ' mailbox');
 
     if ($oldname === null) {
-        $OUTPUT->command('add_folder_row', $name, $name_utf8, $display_name, $protected, $subscribe,
-            $class_name);
+        $RCMAIL->output->command('add_folder_row', $name, $name_utf8, $display_name,
+            $options['protected'] || $options['noselect'], $subscribe, $class_name);
     }
     else {
-        $OUTPUT->command('replace_folder_row', $oldname, $name, $name_utf8, $display_name, $protected, $class_name);
+        $RCMAIL->output->command('replace_folder_row', $oldname, $name, $name_utf8, $display_name,
+            $options['protected'] || $options['noselect'], $class_name);
     }
 }
 
