@@ -27,6 +27,7 @@ $STORAGE = $RCMAIL->get_storage();
 $name      = trim(rcube_utils::get_input_value('_name', rcube_utils::INPUT_POST, true));
 $path      = rcube_utils::get_input_value('_parent', rcube_utils::INPUT_POST, true);
 $old_imap  = rcube_utils::get_input_value('_mbox', rcube_utils::INPUT_POST, true);
+$type      = rcube_utils::get_input_value('_type', rcube_utils::INPUT_POST);
 $name_imap = rcube_charset::convert($name, RCUBE_CHARSET, 'UTF7-IMAP');
 // $path is in UTF7-IMAP already
 
@@ -70,10 +71,11 @@ else {
     }
 }
 
+$dual_use_supported = $STORAGE->get_capability(rcube_storage::DUAL_USE_FOLDERS);
+$acl_supported      = $STORAGE->get_capability('ACL');
+
 // Check access rights to the parent folder
-if (!$error && strlen($path) && (!strlen($old_imap) || $old_imap != $name_imap)
-    && $STORAGE->get_capability('ACL')
-) {
+if (!$error && $acl_supported && strlen($path) && (!strlen($old_imap) || $old_imap != $name_imap)) {
     $parent_opts = $STORAGE->folder_info($path);
     if ($parent_opts['namespace'] != 'personal'
         && (empty($parent_opts['rights']) || !preg_match('/[ck]/', implode($parent_opts['rights'])))
@@ -102,12 +104,21 @@ else {
 if (!$error && !strlen($old_imap)) {
     $folder['subscribe'] = true;
 
+    // Server does not support both sub-folders and messages in a folder
+    // For folders that are supposed to contain other folders we will:
+    //    - disable subscribtion
+    //    - add a separator at the end to make them \NoSelect
+    if (!$dual_use_supported && $type == 'folder') {
+        $folder['subscribe'] = false;
+        $folder['noselect']  = true;
+    }
+
     $plugin = $RCMAIL->plugins->exec_hook('folder_create', array('record' => $folder));
 
     $folder = $plugin['record'];
 
     if (!$plugin['abort']) {
-        $created = $STORAGE->create_folder($folder['name'], $folder['subscribe']);
+        $created = $STORAGE->create_folder($folder['name'], $folder['subscribe'], null, $folder['noselect']);
     }
     else {
         $created = $plugin['result'];
